SERVER-9993 Accept any numeric type for the maxSize field in config.shards